Pretty much all works. Some issues however:
- User profile stats not switching
- Can create multiple users under same name
- Small grid size not displaying correctly
- Can't play properly on a small or large grid - fix code?